# code-review-manager

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/data_model/: make_project.rs  post_review.rs
src/database/: make_project.rs  mod.rs  post_preview.rs
src/server/: make_project.rs  mod.rs  post_review.rs
