[package]
name = "code-review-manager"
version = "0.1.0"
authors = ["higashi000 <higashi.ict@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "0.9.0"
bson = "0.14.0"
actix-rt = "1.0.0"
actix-web = "2.0.0"
actix-files = "0.2.1"
actix-session = "0.3.0"
actix-utils = "1.0.6"
futures = "0.3.4"
env_logger = "0.7.1"
bytes = "0.5.4"
actix = "0.9.0"
json = "0.12.3"
serde = "1.0.104"
serde_json = "1.0.48"
